--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "db:seed": "node generator.js",
+    "lint": "eslint .",
+    "posttest": "npm run lint && nsp check",
+    "seed": "mysql -u root < schema.sql && node database/generator.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon server/index.js -w database -w server"
   },
