--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "s3": "^4.4.0"
   },
   "devDependencies": {
     "db-seed": "^1.2.0",
