--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run:
           name: Set up db
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      - run: apt-get update
       - run:
           name: Install dependecies
           command: sudo apt install mysql-client
