--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,10 @@ jobs:
       - run:
           name: Set up db
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
-      - run: sudo apt-get update
+
       - run:
           name: Install dependecies
-          command: sudo apt install mysql-client
+          command: sudo apt-get install mysql-client
       - run: npm install
 
       - save_cache:
