install react and react-dom

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "s3": "^4.4.0",
     "supertest": "^4.0.2"
   },
