Set up loaders for css and image

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "aws-sdk": "^2.432.0",
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
+    "css-loader": "^2.1.1",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "jest": "^24.5.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
