--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "seed": "node database/generator.js",
     "start": "node server/index.js",
+    "build": "webpack --config ./client/webpack.config.js -p",
     "start-frontend": "webpack-dev-server --config ./client/webpack.config.js --mode development",
     "start:dev": "nodemon server/index.js"
   },
@@ -23,6 +24,7 @@
     "axios": "^0.18.0",
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
@@ -40,6 +42,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "db-seed": "^1.2.0",
     "faker": "^4.1.0",
     "react-hot-loader": "^4.8.2",
