--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
@@ -34,7 +35,10 @@
     "nodemon": "^1.18.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "s3": "^4.4.0",
+    "styled-components": "^4.2.0",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
