--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
     "s3": "^4.4.0",
     "styled-components": "^4.2.0",
     "supertest": "^4.0.2"
