--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "aws-sdk": "^2.432.0",
     "axios": "^0.18.0",
     "babel": "^6.23.0",
