--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "aws-sdk": "^2.432.0",
     "axios": "^0.18.0",
     "babel": "^6.23.0",
