--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
